#    - enhancement: normal plugin output includes now load thresholds
#    - feature: --grapher and --grapherurl options to specify which grapher
#      solution is used. And alternative url can be specified. 
#    - feature: --short or --long options for less or more detailed plugin 
#      outputs. Using --long allow to clearly identify problematic interfaces
#      directly in the output of the plugin
#    - enhancement: some options can now be specified multiple times and are
#      concatenated. Exemple: --exclude 'pat1' --exclude 'pat2,pat3'. 
#      Concerned options: track, exclude, include, excludeportperf, 
#      includeportperf
#    - feature: added an option to print the default values of the options
#    - enhancement: updated the pod doc and moved to end for better reading.
#    - enhancement: data::dumper sorting
#    - enhancement: removed man option (prefered perldoc reading)
#   ----------------------------------------------------------------------
#
#
# ========================================================================
# 	TODO list:
# 	 - option to enable change tracking for interfaces going from down to up
# 	 - add GetSnmpWalkxxxxx -> use of get_table and evaluate performances
# 	   against the use of unix snmpwalk
#    - rewrite the way the fields in the info table are selected for more 
#      flexibility
#    - snmp v2c / v3 support
#    - extend the debug with new debug levels. Might be in the model of 
#      an addition of 0/1/2/4/8/16/32/64 to really select what is needed...
#    - info table (first table) building way review for more flexibility
#    - review general structure of the plugin
#    - see if the short (old) plugin output is really relevant or can be 
#      simply replaced by the long output
#    - add check and threshold options for packet errors/discards
#    - check and remove the % character if any in the commandline arguments
# ========================================================================