@@ -102,11 +102,11 @@ if(($display_errors == 1) && (isset($RRDFILE[4]))){
 if($display_operstatus == 1){
     $num_graph++;
     $ds_name[$num_graph] = 'Operational status';
-    $opt[$num_graph] = " --vertical-label \"\"  --title 'Operational status' ";
-    $opt[$num_graph] .= "--watermark=\"Template: check_snmp_netint.php by Yannick Charton\" ";
+    $opt[$num_graph] = " --vertical-label \"\"  --title 'Operational status' --y-grid none --units-length 8";
+    $opt[$num_graph] .= " --watermark=\"Template: check_snmp_netint.php by Yannick Charton\" ";
     $def[$num_graph] = "";
     $def[$num_graph] .= rrd::def     ("oper_status", $RRDFILE[1], $DS[1], "AVERAGE");
-    $def[$num_graph] .= rrd::alerter ("oper_status", "Operational status", 1.1, 2.1, "FF", $UNIT[2],"#00ff00","#ff0000","#ff8c00") ;
+    $def[$num_graph] .= rrd::ticker  ("oper_status", 1.1, 2.1, 0.5,"ff","#00ff00","#ff0000","#ff8c00");
 }
 
 ?>
